--- a/components/loader.html
+++ b/components/loader.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../imgs/favicon.ico" type="image/x-icon" />
     <style>
       .blue-circle {
         animation-delay: 0.1s;
@@ -20,53 +21,17 @@
   </head>
   <body>
     <div
-      class="
-        overflow-hidden
-        flex
-        justify-center
-        items-center
-        bg-gray-100
-        opacity-80
-        h-screen
-        z-50
-        w-screen
-        fixed
-      "
+      class="overflow-hidden flex justify-center items-center bg-gray-100 opacity-80 h-screen z-50 w-screen fixed"
       id="preloader"
     >
       <div
-        class="
-          bg-white
-          flex
-          space-x-2
-          p-5
-          rounded-full
-          justify-center
-          items-center
-          shadow-2xl
-        "
+        class="bg-white flex space-x-2 p-5 rounded-full justify-center items-center shadow-2xl"
       >
         <div
-          class="
-            bg-blue-600
-            p-2
-            w-4
-            h-4
-            rounded-full
-            animate-bounce
-            blue-circle
-          "
+          class="bg-blue-600 p-2 w-4 h-4 rounded-full animate-bounce blue-circle"
         ></div>
         <div
-          class="
-            bg-green-600
-            p-2
-            w-4
-            h-4
-            rounded-full
-            animate-bounce
-            green-circle
-          "
+          class="bg-green-600 p-2 w-4 h-4 rounded-full animate-bounce green-circle"
         ></div>
         <div
           class="bg-red-600 p-2 w-4 h-4 rounded-full animate-bounce red-circle"
